--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Clone source code
         run: |
           git clone --depth 1 --single-branch --branch dev-v2-rtsp https://github.com/tresvecesseis/ExoPlayer.git boxdir
-          sed -i 's/5.1.1/6.5/g' gradle/wrapper/gradle-wrapper.properties
-          sed -i 's/3.4.0/4.0.1/g' build.gradle
+          sed -i 's/5.1.1/6.5/g' boxdir/gradle/wrapper/gradle-wrapper.properties
+          sed -i 's/3.4.0/4.0.1/g' boxdir/build.gradle
           #git clone --depth 1 --single-branch --branch release https://github.com/androidx/media.git boxdir
           #wget https://github.com/takagen99/Box/raw/main/gradlew -O boxdir/demos/main/gradlew
 
