--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,10 +29,10 @@ jobs:
           cd boxdir
           chmod +x gradlew
           ./gradlew projects
-          ./gradlew demo:assemblerelease --build-cache --parallel --daemon --stacktrace --warning-mode all
+          ./gradlew demo:assembledebug --build-cache --parallel --daemon --stacktrace --warning-mode all
 
       - name: Upload App To Artifact
         uses: actions/upload-artifact@v3
         with:
           name: rstptest
-          path: boxdir
+          path: boxdir/demos/main/buildout/outputs/apk/withDecoderExtensions
