--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
           signingConfigs="$(echo "$signingConfigs" |base64 -d )"
           signingConfig="$(echo "$signingConfig" |base64 -d )"
           sed -i -e "/defaultConfig {/i\\$signingConfigs " -e "/debug {/a\\$signingConfig " -e "/release {/a\\$signingConfig " demos/main/build.gradle
-          cp -f ../android.jks app/android.jks
+          cp -f ../android.jks demos/main/android.jks
           sed -i '$a\RELEASE_STORE_FILE=./android.jks'     ./gradle.properties
           sed -i '$a\RELEASE_KEY_ALIAS=muziling'            ./gradle.properties
           sed -i '$a\RELEASE_STORE_PASSWORD=111111'       ./gradle.properties
