--- a/.github/workflows/build-tvbox.yml
+++ b/.github/workflows/build-tvbox.yml
@@ -49,13 +49,13 @@ jobs:
             cp -f tvboxpatch/film.png boxdir/app/src/main/res/drawable/app_icon.png
           elif [ "${{ inputs.author }}" == "okjack" ]; then
             git clone --depth 1 -b okjack https://github.com/FongMi/TV.git boxdir
-            sed -i 's/import com.fongmi.android.tv.api.config.LiveConfig;/import com.fongmi.android.tv.api.config.LiveConfig;import com.fongmi.android.tv.bean.Config;/g'  boxdir/app/src/main/java/com/fongmi/android/tv/App.java
+            sed -i 's/import com.fongmi.android.tv.utils.Notify;/import com.fongmi.android.tv.utils.Notify;import com.fongmi.android.tv.bean.Config;/g'  boxdir/app/src/main/java/com/fongmi/android/tv/App.java
             sed -i 's|});|});Config.vod().url("http://192.168.200.1:8000/tvbox").update();|g'  boxdir/app/src/main/java/com/fongmi/android/tv/App.java
             sed -i 's/initConfig();/initConfig();LiveActivity.start(this);/g' boxdir/app/src/leanback/java/com/fongmi/android/tv/ui/activity/HomeActivity.java
           
           else
             git clone --depth 1 -b release https://github.com/FongMi/TV.git boxdir
-            sed -i 's/import com.fongmi.android.tv.api.config.LiveConfig;/import com.fongmi.android.tv.api.config.LiveConfig;import com.fongmi.android.tv.bean.Config;/g'  boxdir/app/src/main/java/com/fongmi/android/tv/App.java
+            sed -i 's/import com.fongmi.android.tv.utils.Notify;/import com.fongmi.android.tv.utils.Notify;import com.fongmi.android.tv.bean.Config;/g'  boxdir/app/src/main/java/com/fongmi/android/tv/App.java
             sed -i 's|});|});Config.vod().url("http://192.168.200.1:8000/tvbox").update();|g'  boxdir/app/src/main/java/com/fongmi/android/tv/App.java
             sed -i 's/initConfig();/initConfig();LiveActivity.start(this);/g' boxdir/app/src/leanback/java/com/fongmi/android/tv/ui/activity/HomeActivity.java
           
