--- a/.github/workflows/build-categraf.yml
+++ b/.github/workflows/build-categraf.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           git clone --depth 1 -b v0.4.3 --single-branch https://github.com/flashcatcloud/categraf.git .
           wget https://github.com/muziling/openwrt-autocompile/raw/refs/heads/master/instances.go
-          cp -f instances.go inputs/smart/instances.go
+          mv -f instances.go inputs/smart/instances.go
           go mod tidy
           go build  -ldflags="-s -w"
 
