--- a/.github/workflows/build-unraid-kernel.yml
+++ b/.github/workflows/build-unraid-kernel.yml
@@ -46,6 +46,7 @@ jobs:
           cd /workdir/linux-$MY_KERNEL_VERSION
           ls -l *.patch
           find . -type f -iname '*.patch' -print0|xargs -n1 -0 patch -p 1 -i
+          cat config.usb >> .config
 
           make oldconfig
           cat .config
